--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI="mongodb+srv://balajikumar7061:balajikumar70@cluster0.jxckgrw.mongodb.net/chemistry"
+MONGO_URI="mongodb+srv://balajikumar7061:balajikumar70@cluster0.jxckgrw.mongodb.net/rajaelectronics"
 JWT_SECRET="SAGAR"
 # RAZORPAY_KEY_ID=dummy_key_id
 # RAZORPAY_SECRET=dummy_key_secret
