--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,11 @@
 PORT=5000
-MONGO_URI="mongodb+srv://balajikumar7061:balajikumar70@cluster0.jxckgrw.mongodb.net/rajaelectronics"
+MONGO_URI="mongodb+srv://anushka728208:anushka7282@cluster0.ch0fkjc.mongodb.net/rajaelectronics"
 JWT_SECRET="SAGAR"
 # RAZORPAY_KEY_ID=dummy_key_id
 # RAZORPAY_SECRET=dummy_key_secret
 CLOUDINARY_CLOUD_NAME= dixhzv2eo
-CLOUDINARY_API_KEY=917924793855971
-CLOUDINARY_API_SECRET=QTT7Lmi_SsEbiRqOVuChiI9xric
+CLOUDINARY_API_KEY=932143183825785
+CLOUDINARY_API_SECRET=GHyvQ-mDfBEfXiH_JJxseK5IwHU
 ADMIN_EMAIL=admin@shop.com
 ADMIN_PASSWORD=Admin123
 
