--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,7 @@ MONGO_URI="mongodb+srv://anushka728208:anushka7282@cluster0.ch0fkjc.mongodb.net/
 JWT_SECRET="SAGAR"
 # RAZORPAY_KEY_ID=dummy_key_id
 # RAZORPAY_SECRET=dummy_key_secret
-CLOUDINARY_CLOUD_NAME= dixhzv2eo
+CLOUDINARY_CLOUD_NAME= deqfvijtt
 CLOUDINARY_API_KEY=932143183825785
 CLOUDINARY_API_SECRET=GHyvQ-mDfBEfXiH_JJxseK5IwHU
 ADMIN_EMAIL=admin@shop.com
